--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+  	<link rel="stylesheet" type="text/css" href="css.css">
     <title>MePass</title>
   </head>
   <body>
     <h1>MePass App</h1>
+    <h2>Te explico sobre la app: </h2>
+    <p>
+      Esta appp te ayudara a tener un mejor manejo de todos tus contraseñas con
+      la ventaja de saber que estaran completamente cifradas.
+    </p>
   </body>
 </html>
